--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /log
 /snapshots
 /org.openpnp.vision.pipeline.stages.ImageWriteDebug
+/org.openpnp.util.FeederVisionHelper/*.png
+/org.openpnp.machine.reference.feeder.ReferenceDragFeeder.Vision/*.png
